2009-10-01  Tobias Burnus  <burnus@net-b.de>

PR fortran/41515
        * decl.c (do_parm): Call add_init_expr_to_sym.

2009-10-01  Tobias Burnus  <burnus@net-b.de>

        PR fortran/41515
        * gfortran.dg/parameter_array_init_5.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@152377 138bc75d-0d04-0410-961f-82ee72b054a4